--- a/FAQ/backend/.env
+++ b/FAQ/backend/.env
@@ -1,3 +1,5 @@
 NODE_ENV = 'development'
 PORT = '5100'
 MONGO_URL = 'mongodb+srv://admin:W0YEUIXmK0QIE6wg@faq-management.h32bh.mongodb.net/'
+JWT_SECRET = secret
+JWT_EXPIRES_IN = 1d
