--- a/FAQ/backend/package.json
+++ b/FAQ/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "setup-project": "npm i && cd client && npm i",
+    "setup-project": "npm i && cd backend && npm i",
     "dev": "nodemon server.js"
   },
   "keywords": [],
