--- a/FAQ/frontend/package.json
+++ b/FAQ/frontend/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@tanstack/react-query": "^5.62.11",
     "@tanstack/react-query-devtools": "^5.62.11",
-    "axios": "^1.3.6",
+    "axios": "^1.7.9",
     "dayjs": "^1.11.7",
+    "dompurify": "^3.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^4.8.0",
